--- a/public/about.html
+++ b/public/about.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>Document</title>
   </head>
   <body>
     <h1>About</h1>
+    <img src="./images/220px-Nyan_cat_250px_frame.png" alt="nyan cat" />
   </body>
 </html>
